monitoring/controllers/base/popeye/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: popeye
  labels:
    app.kubernetes.io/name: popeye
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
